# appsettings2

./: .gitattributes  .gitignore  README.md  pyproject.toml
.gitea/workflows/: pipeline.yaml
docs/: accessing.rst  attribute_handling.rst  conf.py  configuration_values.rst  contact.rst  direct_access.rst  index.rst  object_binding.rst  quickstart.rst
docs/ref/: Configuration.rst  ConfigurationBuilder.rst  appsettings2.rst  index.rst
docs/ref/providers/: CommandLineConfigurationProvider.rst  ConfigurationProvider.rst  EnvironmentConfigurationProvider.rst  JsonConfigurationProvider.rst  TomlConfigurationProvider.rst  YamlConfigurationProvider.rst  index.rst
src/: Configuration.py  ConfigurationBuilder.py  ConfigurationException.py  __init__.py
src/providers/: CommandLineConfigurationProvider.py  ConfigurationProvider.py  EnvironmentConfigurationProvider.py  JsonConfigurationProvider.py  TomlConfigurationProvider.py  YamlConfigurationProvider.py  __init__.py
sys/: init-venv.sh  make-docs.sh  publish-packages.sh  run-tests.sh  with-venv.sh
tests/: ConfigurationBuilderTests.py  ConfigurationTests.py  TempTests.py
tests/configs/: exact.json  exact.toml  exact.yaml  subset.json  subset.toml  subset.yaml
tests/fakes/: ExampleConfigObj.py  FakeComplexTypes.py  FakeConfigObj.py  FakeInheritanceTypes.py  FakePropertyObjects.py  __init__.py
tests/providers/: CommandLineConfigurationProviderTests.py  EnvironmentConfigurationProviderTests.py  JsonConfigurationProviderTests.py  TomlConfigurationProviderTests.py  YamlConfigurationProviderTests.py  __init__.py
